# discord-bot-cpp

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/discord_bot/: discord.cpp  discord.h
src/discord_bot/structure/: bot_settings.h
src/utils/: quick_hash.h
